    decoration.
 8. Fix border of radio buttons when general round setting is set to square.
 9. Always use a 1 pixel border for toolbars - as using a border of 0 can cause
    items of adjoining locked toolbars to be too close.
10. Add separator to messafge dialog boxes - matches KDE.
11. Add option to act upon titlebar buttons to hide menubar and statusbars.

1.3.0
-----
 1. Add option to use kwin titlebar colours as menubar shade.
 2. Add option to hide status bars via Ctrl-Alt-S
 3. Add option to drag windows by menubar.
 4. Better check/radio positioning.
 5. Fix background painting with some toolbars.
 6. Draw window frames square.
 7. Fix rounding of check/radio/splitter/expander highlight.
 8. Set toolbar frame width to 0 if not drawing borders.
 9. When toggling menubar, or statusbar, queue a redraw of the window.
10. Decrease size of SWT toolbars.
11. Disable background image and gradient for SWT apps.
12. Only allow QtCurve's colours to be overridden if they come from QtCurveRcStyle
    or GtkRcStyle. Also, in the case of root, disallow 'ToolTip' and 'default'
    styles - as if app is run via kdesu/kdesudo, these could potentially be the
    user's colours. This should stop other theme's / user's colours from interfering.
13. If using KDE4/Qt4 colour settings, only force the colours for buttons that are
    disabled. This fixes the coloured text on GWave's buttons.
14. Fix shading of menubars and when using flat menubar appearance and background
    image/gradient.
15. Fix slider groove not always being painted when using background gradient/rings.
16. Fix drawing glitches with unified comboentries on mouse over.
17. Improve firefox menubar text colouring.

1.2.0
-----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.
 2. If drawing square non-gtk style scrollviews, use a dark/light borders.
 3. If drawing square scrollviews, set frame width to 1 if using thin scrollbar
    groove.